modify coding list - index.html

--- a/grader3/index.html
+++ b/grader3/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title> 프로젝트 UI개발 작업리스트 </title>
  	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
-	<script type="text/javascript" src="js/jquery-2.2.4.min.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700" rel="stylesheet" />
 	<style>
 		@charset "utf-8"; 
@@ -145,11 +145,11 @@
 				</tr>
 				<tr>
 					<td class="depth">3415조연수</td>
-					<td><a href="zoedeng/index.html">zoedeng/index.html</a></td>
+					<td><a href="zoedeng/html/index.html">zoedeng/html/index.html</a></td>
 				</tr>
 				<tr>
 					<td class="depth">3418홍지우</td>
-					<td><a href="jjiwoo/index.html">jjiwoo/index.html</a></td>
+					<td><a href="jjiwoo/html/index.html">jjiwoo/html/index.html</a></td>
 				</tr>
 				<tr>
 					<td class="depth">3419홍혜빈</td>
